tests/fail/UnaryPlus.java
package fail;

import java.lang.System;

public class UnaryPlus {
  //  unary + is only allowed for intS (or types that can be coerced to int)
  String x = "hello";
  System.out.println(+x);
}


